[project]
name = "robotpy-statespace-test"
version = "0.0.0"
description = "The Drop Bears' Arm State Space Test"
authors = [{ name = "The Drop Bears", email = "enquiries@thedropbears.org.au" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13,<3.14"

dependencies = [
    "numpy~=2.2",
    "robotpy==2025.3.2.1",
    "robotpy-rev~=2025.0.3",
    "robotpy-wpilib-utilities==2025.1.0",
]

[tool.robotpy]
requires = [
    "numpy==2.2.1.dev0; platform_machine == 'roborio'",
    "robotpy-rev~=2025.0.3",
    "robotpy-wpilib-utilities==2025.1.0",
]
robotpy_version = "2025.3.2.1"
